--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ryanwelcher/dynamic-block-template",
-  "version": "1.3.0",
+  "name": "@robruiz/dynamic-block-template",
+  "version": "1.0.0",
   "description": "A template for use with @wordpress/create-block to support dynamic blocks",
   "license": "GPL-2.0-or-later",
   "keywords": [
@@ -10,13 +10,13 @@
     "dynamic block"
   ],
   "author": {
-    "name": "Ryan Welcher",
-    "url": "https://ryanwelcher.com"
+    "name": "Rob Ruiz",
+    "url": "https://www.linkedin.com/in/robcruiz/"
   },
-  "homepage": "https://github.com/ryanwelcher/dynamic-block-template",
+  "homepage": "https://github.com/robruiz/dynamic-block-template",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ryanwelcher/dynamic-block-template.git"
+    "url": "https://github.com/robruiz/dynamic-block-template.git"
   },
   "bugs": {
     "url": "https://github.com/ryanwelcher/dynamic-block-template/issues"
